--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     height: 100vh;
     align-content: center;
@@ -19,9 +25,9 @@ body {
 }
 
 .container {
-    width: 30%;
+    width: 40%;
     box-shadow: 1px 0 10px rgba(0, 0, 0, 0.4);
-    padding: 25px;
+    padding: 50px;
     border-radius: 15px;
     background-color: rgba(86, 86, 86, 0.4);
     place-items: center;
@@ -29,6 +35,7 @@ body {
 
 h3 {
     font-family: 'digital-7', cursive;
+    padding: 10px 0;
     letter-spacing: 2px;
     text-align: center;
     color: #1591f0;
@@ -36,10 +43,22 @@ h3 {
 }
 
 label {
-    color: #c2dcef;
+    color: #67bdff ;
     display: flex;
     font-size: 18px;
     justify-content: center;
+}
+
+.input{
+    display: flex;
+    justify-content: space-around;
+}
+span,
+p {
+    padding: 10px 0;
+    color: #67bdff ;
+    font-weight: 600;
+    font-size: 18px;
 }
 
 input[type="number"] {
@@ -47,23 +66,36 @@ input[type="number"] {
     border-radius: 10px;
     border: solid #67bdff 3px;
     width: 80%;
+    -moz-appearance: textfield;
+    appearance: textfield;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 button {
     padding: 10px 20px;
     border: none;
-    color: darkgreen;
+    color: #025798;
     font-weight: 600;
     font-size: 15px;
-    background-color: yellowgreen;
+    background-color: #67bdff;
     border-radius: 5px;
     position: relative;
     left: 50%;
     transform: translatex(-50%);
     cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+button:hover {
+    transform: translatex(-50%) scale(1.1);
 }
 
 .result {
-    color: darkgreen;
+    color: rgb(129, 241, 24);
     font-weight: 600;
 }
